--- a/html/index.html
+++ b/html/index.html
@@ -691,7 +691,8 @@
 
 
     <script type="text/javascript">
-        $(function() {
+
+        document.addEventListener("DOMContentLoaded" , function() {
             // 탭 변경을 처리하기 위한 이벤트 리스너 추가
             $('ul.tab-list li').click(function() {
                 var activeTab = $(this).attr('data-tab');
@@ -706,57 +707,51 @@
                 $('.dev-slick .display-list').slick('refresh');
             });
 
+            // 페이지 로드 시 slick 캐러셀 초기화
+            $('.device-slick .device-container').slick({
+                slide: 'li',
+                infinite: true,
+                slidesToShow: 1,
+                slidesToScroll: 1,
+                autoplay: true,
+                autoplaySpeed: 1500,
+                draggable: true,
+                dots: false,
+                prevArrow: $('.device-slick .pager .prev'),
+                nextArrow: $('.device-slick .pager .next'),
+                speed: 1500,
+            });
+
+            // 페이지 로드 시 slick 캐러셀 초기화
+            $('.design-slick .display-list').slick({
+                slide: 'li',
+                infinite: true,
+                slidesToShow: 1,
+                slidesToScroll: 1,
+                autoplay: true,
+                autoplaySpeed: 1500,
+                draggable: true,
+                dots: false,
+                prevArrow: $('.device-slick .pager .prev'),
+                nextArrow: $('.device-slick .pager .next'),
+                speed: 1500,
+            });
+
+            // 페이지 로드 시 slick 캐러셀 초기화
+            $('.dev-slick .display-list').slick({
+                slide: 'li',
+                infinite: true,
+                slidesToShow: 1,
+                slidesToScroll: 1,
+                autoplay: true,
+                autoplaySpeed: 1500,
+                draggable: true,
+                dots: false,
+                prevArrow: $('.device-slick .pager .prev'),
+                nextArrow: $('.device-slick .pager .next'),
+                speed: 1500,
+            });
         });
-        // 페이지 로드 시 slick 캐러셀 초기화
-        $('.device-slick .device-container').on('init', function() {
-            $(this).slick({
-                slide: 'li',
-                infinite: true,
-                slidesToShow: 1,
-                slidesToScroll: 1,
-                autoplay: true,
-                autoplaySpeed: 1500,
-                draggable: true,
-                dots: false,
-                prevArrow: $('.device slick .pager .prev'),
-                nextArrow: $('.device slick .pager .next'),
-                speed: 1500,
-            });
-        }).slick('init');
-
-        //  페이지 로드 시 slick 캐러셀 초기화
-        $('.design-slick .display-list').on('init', function() {
-            $(this).slick({
-                slide: 'li',
-                infinite: true,
-                slidesToShow: 1,
-                slidesToScroll: 1,
-                autoplay: true,
-                autoplaySpeed: 1500,
-                draggable: true,
-                dots: false,
-                prevArrow: $('.device slick .pager .prev'),
-                nextArrow: $('.device slick .pager .next'),
-                speed: 1500,
-            });
-        }).slick('init');
-
-        //  페이지 로드 시 slick 캐러셀 초기화
-        $('.dev-slick .display-list').on('init', function() {
-            $(this).slick({
-                slide: 'li',
-                infinite: true,
-                slidesToShow: 1,
-                slidesToScroll: 1,
-                autoplay: true,
-                autoplaySpeed: 1500,
-                draggable: true,
-                dots: false,
-                prevArrow: $('.device slick .pager .prev'),
-                nextArrow: $('.device slick .pager .next'),
-                speed: 1500,
-            });
-        }).slick('init');
     </script>
 </body>
 </html>
