--- a/html/index.html
+++ b/html/index.html
@@ -732,8 +732,8 @@
                 autoplaySpeed: 1500,
                 draggable: true,
                 dots: false,
-                prevArrow: $('.device-slick .pager .prev'),
-                nextArrow: $('.device-slick .pager .next'),
+                prevArrow: $('.design-slick .pager .prev'),
+                nextArrow: $('.deisgn-slick .pager .next'),
                 speed: 1500,
             });
 
@@ -747,8 +747,8 @@
                 autoplaySpeed: 1500,
                 draggable: true,
                 dots: false,
-                prevArrow: $('.device-slick .pager .prev'),
-                nextArrow: $('.device-slick .pager .next'),
+                prevArrow: $('.dev-slick .pager .prev'),
+                nextArrow: $('.dev-slick .pager .next'),
                 speed: 1500,
             });
         });
