maybe my last fix

--- a/html/index.html
+++ b/html/index.html
@@ -733,7 +733,7 @@
                 draggable: true,
                 dots: false,
                 prevArrow: $('.design-slick .pager .prev'),
-                nextArrow: $('.deisgn-slick .pager .next'),
+                nextArrow: $('.design-slick .pager .next'),
                 speed: 1500,
             });
 
