--- a/html/index.html
+++ b/html/index.html
@@ -265,7 +265,9 @@
                             </div>
                             <ul class="tools-list">
                                 <li class="tools-item">
-                                    <div class="item-img"></div>
+                                    <div class="item-img">
+                                        <img src="../img/tools/tool-ai.png" alt="tools-ai-icon">
+                                    </div>
                                     <div class="item-bar">
                                         <div class="bar-name">Adobe Illustration</div>
                                         <div class="bar-per">
@@ -276,7 +278,9 @@
                                     <div class="item-per">100%</div>
                                 </li>
                                 <li class="tools-item">
-                                    <div class="item-img"></div>
+                                    <div class="item-img">
+                                        <img src="../img/tools/tool-ps.png" alt="tools-ps-icon">
+                                    </div>
                                     <div class="item-bar">
                                         <div class="bar-name">Adobe Photoshop</div>
                                         <div class="bar-per">
@@ -287,7 +291,9 @@
                                     <div class="item-per">100%</div>
                                 </li>
                                 <li class="tools-item">
-                                    <div class="item-img"></div>
+                                    <div class="item-img">
+                                        <img src="../img/tools/tool-xd.png" alt="tools-xd-icon">
+                                    </div>
                                     <div class="item-bar">
                                         <div class="bar-name">Adobe XD</div>
                                         <div class="bar-per">
@@ -298,7 +304,9 @@
                                     <div class="item-per">100%</div>
                                 </li>
                                 <li class="tools-item">
-                                    <div class="item-img"></div>
+                                    <div class="item-img">
+                                        <img src="../img/tools/tool-figma.png" alt="tools-figma-icon">
+                                    </div>
                                     <div class="item-bar">
                                         <div class="bar-name">Figma</div>
                                         <div class="bar-per">
@@ -309,7 +317,9 @@
                                     <div class="item-per">90%</div>
                                 </li>
                                 <li class="tools-item">
-                                    <div class="item-img"></div>
+                                    <div class="item-img">
+                                        <img src="../img/tools/tool-id.png" alt="tools-indesign-icon">
+                                    </div>
                                     <div class="item-bar">
                                         <div class="bar-name">Adobe Indesign</div>
                                         <div class="bar-per">
@@ -320,7 +330,9 @@
                                     <div class="item-per">90%</div>
                                 </li>
                                 <li class="tools-item">
-                                    <div class="item-img"></div>
+                                    <div class="item-img">
+                                        <img src="../img/tools/tool-ae.png" alt="tools-afterEffect-icon">
+                                    </div>
                                     <div class="item-bar">
                                         <div class="bar-name">Adobe After Effect</div>
                                         <div class="bar-per">
@@ -331,9 +343,11 @@
                                     <div class="item-per">90%</div>
                                 </li>
                                 <li class="tools-item">
-                                    <div class="item-img"></div>
+                                    <div class="item-img">
+                                        <img src="../img/tools/tool-pr.png" alt="tools-premierePro-icon">
+                                    </div>
                                     <div class="item-bar">
-                                        <div class="bar-name">Adobe Premiere</div>
+                                        <div class="bar-name">Adobe Premiere Pro</div>
                                         <div class="bar-per">
                                             <div class="bar-back"></div>
                                             <div class="bar-front per90"></div>
@@ -354,7 +368,9 @@
                             </div>
                             <ul class="tools-list">
                                 <li class="tools-item">
-                                    <div class="item-img"></div>
+                                    <div class="item-img">
+                                        <img src="../img/tools/tool-vscode.png" alt="tools-visualStudioCode-icon">
+                                    </div>
                                     <div class="item-bar">
                                         <div class="bar-name">Visual Studio Code</div>
                                         <div class="bar-per">
@@ -365,7 +381,9 @@
                                     <div class="item-per">100%</div>
                                 </li>
                                 <li class="tools-item">
-                                    <div class="item-img"></div>
+                                    <div class="item-img">
+                                        <img src="../img/tools/tool-dw.png" alt="tools-dreamWeaver-icon">
+                                    </div>
                                     <div class="item-bar">
                                         <div class="bar-name">Adobe DreamWeaver</div>
                                         <div class="bar-per">
@@ -376,7 +394,9 @@
                                     <div class="item-per">100%</div>
                                 </li>
                                 <li class="tools-item">
-                                    <div class="item-img"></div>
+                                    <div class="item-img Html">
+                                        <img src="../img/tools/tool-html.png" alt="tools-html-icon">
+                                    </div>
                                     <div class="item-bar">
                                         <div class="bar-name">HTML 5</div>
                                         <div class="bar-per">
@@ -387,7 +407,9 @@
                                     <div class="item-per">100%</div>
                                 </li>
                                 <li class="tools-item">
-                                    <div class="item-img"></div>
+                                    <div class="item-img Css">
+                                        <img src="../img/tools/tool-css.png" alt="tools-css-icon">
+                                    </div>
                                     <div class="item-bar">
                                         <div class="bar-name">CSS 3</div>
                                         <div class="bar-per">
@@ -398,7 +420,9 @@
                                     <div class="item-per">100%</div>
                                 </li>
                                 <li class="tools-item">
-                                    <div class="item-img"></div>
+                                    <div class="item-img Js">
+                                        <img src="../img/tools/tool-js.png" alt="tools-javaScript-icon">
+                                    </div>
                                     <div class="item-bar">
                                         <div class="bar-name">Java Script</div>
                                         <div class="bar-per">
@@ -409,7 +433,9 @@
                                     <div class="item-per">70%</div>
                                 </li>
                                 <li class="tools-item">
-                                    <div class="item-img"></div>
+                                    <div class="item-img">
+                                        <img src="../img/tools/tool-jquery.png" alt="tools-jQuery-icon">
+                                    </div>
                                     <div class="item-bar">
                                         <div class="bar-name">J Query</div>
                                         <div class="bar-per">
@@ -420,7 +446,9 @@
                                     <div class="item-per">70%</div>
                                 </li>
                                 <li class="tools-item">
-                                    <div class="item-img"></div>
+                                    <div class="item-img React">
+                                        <img src="../img/tools/tool-react.png" alt="tools-react-icon">
+                                    </div>
                                     <div class="item-bar">
                                         <div class="bar-name">React</div>
                                         <div class="bar-per">
@@ -443,7 +471,9 @@
                             </div>
                             <ul class="tools-list">
                                 <li class="tools-item">
-                                    <div class="item-img"></div>
+                                    <div class="item-img Zeplin">
+                                        <img src="../img/tools/tool-zeplin.png" alt="tools-zeplin-icon">
+                                    </div>
                                     <div class="item-bar">
                                         <div class="bar-name">Zeplin</div>
                                         <div class="bar-per">
@@ -454,7 +484,9 @@
                                     <div class="item-per">90%</div>
                                 </li>
                                 <li class="tools-item">
-                                    <div class="item-img"></div>
+                                    <div class="item-img">
+                                        <img src="../img/tools/tool-nextjs.png" alt="tools-nextJs-icon">
+                                    </div>
                                     <div class="item-bar">
                                         <div class="bar-name">Next JS</div>
                                         <div class="bar-per">
@@ -465,7 +497,9 @@
                                     <div class="item-per">60%</div>
                                 </li>
                                 <li class="tools-item">
-                                    <div class="item-img"></div>
+                                    <div class="item-img NodeJs">
+                                        <img src="../img/tools/tool-nodejs.png" alt="tools-nodeJs-icon">
+                                    </div>
                                     <div class="item-bar">
                                         <div class="bar-name">Node JS</div>
                                         <div class="bar-per">
@@ -476,7 +510,9 @@
                                     <div class="item-per">60%</div>
                                 </li>
                                 <li class="tools-item">
-                                    <div class="item-img"></div>
+                                    <div class="item-img">
+                                        <img src="../img/tools/tool-ts.png" alt="tools-typeScript-icon">
+                                    </div>
                                     <div class="item-bar">
                                         <div class="bar-name">Type Script</div>
                                         <div class="bar-per">
@@ -487,7 +523,9 @@
                                     <div class="item-per">40%</div>
                                 </li>
                                 <li class="tools-item">
-                                    <div class="item-img"></div>
+                                    <div class="item-img">
+                                        <img src="../img/tools/tool-gitHub.png" alt="tools-gitHub-icon">
+                                    </div>
                                     <div class="item-bar">
                                         <div class="bar-name">Git Hub</div>
                                         <div class="bar-per">
