--- a/html/index.html
+++ b/html/index.html
@@ -693,7 +693,7 @@
                         <div class="contact-main">
                             <div class="title-mid">Get in Touch!</div>
                             <div class="email-form">
-                                <form class="form-area" method="POST" data-email="example@email.net" action="https://script.google.com/macros/s/AKfycbzi6YI8bTPgvRRmQl0SHKwH-3zfvawM6labqxGds2Xg3QimaAE8PwHQ4Pdm-sOagf4NUw/exec" target="frAttachFiles">
+                                <form id="contact-form" class="form-area" method="POST" data-email="example@email.net" action="https://script.google.com/macros/s/AKfycbzi6YI8bTPgvRRmQl0SHKwH-3zfvawM6labqxGds2Xg3QimaAE8PwHQ4Pdm-sOagf4NUw/exec" target="frAttachFiles">
                                     <ul class="form-list">
                                         <li class="form-item">
                                             <div class="item-name">
@@ -712,7 +712,7 @@
                                             </div>
                                         </li>
                                     </ul>
-                                    <button class="sendBtn">Send Me!</button>
+                                    <button type="button" class="sendBtn" >Send Me!</button>
                                 </form>
                                 <iframe name="frAttachFiles" style="display: none;"></iframe>
                             </div>
@@ -791,5 +791,40 @@
             });
         });
     </script>
+
+    <!-- <script type="text/javascript">
+        function sendFormData() {
+            var formData = new FormData(document.getElementById('contact-form'));
+
+            // Ajax 요청
+            $.ajax({
+                url:'https://script.google.com/macros/s/AKfycbzi6YI8bTPgvRRmQl0SHKwH-3zfvawM6labqxGds2Xg3QimaAE8PwHQ4Pdm-sOagf4NUw/exec',
+                type: 'POST',
+                data: formData,
+                processData: false,
+                contentType: false,
+                complete: function() {
+                    // Ajax 요청이 완료되면 항상 실행됨
+                    alert('보내졌습니다!');
+                    document.getElementById('contact-form').reset(); // 폼 초기화
+                    location.reload(); // 페이지 새로고침
+                }
+                // success: function(response) {
+                //     // Ajax 요청이 성공한 경우
+                //     alert('보내졌습니다!');
+                //     document.getElementById('contact-form').reset(); // 폼 초기화
+                //     location.reload(); // 페이지 새로고침
+                // },
+                // error: function(error) {
+                //     // Ajax 요청이 실패한 경우
+                //     alert('전송 오류가 발생했습니다. 다시 시도해주세요.');
+                // }
+                // error: function(error) {
+                //     // Ajax 요청이 실패한 경우
+                //     alert('전송 오류가 발생했습니다. 다시 시도해주세요.');
+                // }
+            });
+        }
+    </script> -->
 </body>
 </html>
