--- a/html/index.html
+++ b/html/index.html
@@ -574,7 +574,6 @@
                                 </div>
                             </div>
                             <div class="device-container">
-
                                 <div class="ipad">
                                     <div class="mockup">
                                         <img src="../img/ipad-Mockup.png" width="794px" height="610px">
@@ -611,6 +610,135 @@
                                             <li class="display-item"><img src="../img/mob-cover/dev-pf-09.png" class="item"></li>
                                         </ul>
                                     </div>
+                                </div>
+                            </div>
+                            <div class="modal design-modal1">
+                                <div class="modal-window">
+                                    <div class="modal-area">
+                                        <ul class="modal-list">
+                                            <li class="modal-item"><img src="../img/modal-cont/01/design-pf-01-02.png" class="item"></li>
+                                            <li class="modal-item"><img src="../img/modal-cont/01/design-pf-01-03.png" class="item"></li>
+                                            <li class="modal-item"><img src="../img/modal-cont/01/design-pf-01-04.png" class="item"></li>
+                                            <li class="modal-item"><img src="../img/modal-cont/01/design-pf-01-05.png" class="item"></li>
+                                            <li class="modal-item"><img src="../img/modal-cont/01/design-pf-01-06.png" class="item"></li>
+                                            <li class="modal-item"><img src="../img/modal-cont/01/design-pf-01-07.png" class="item"></li>
+                                        </ul>
+                                    </div>
+                                    <button type="button" class="close-button">
+                                        <span class="close-button-item">&times;</span>
+                                    </button>
+                                </div>
+                            </div>
+                            <div class="modal design-modal2">
+                                <div class="modal-window">
+                                    <div class="modal-area">
+                                        <ul class="modal-list">
+                                            <li class="modal-item"><img src="../img/modal-cont/02/design-pf-02-02.png" class="item"></li>
+                                            <li class="modal-item"><img src="../img/modal-cont/02/design-pf-02-03.png" class="item"></li>
+                                            <li class="modal-item"><img src="../img/modal-cont/02/design-pf-02-04.png" class="item"></li>
+                                            <li class="modal-item"><img src="../img/modal-cont/02/design-pf-02-05.png" class="item"></li>
+                                        </ul>
+                                    </div>
+                                    <button type="button" class="close-button">
+                                        <span class="close-button-item">&times;</span>
+                                    </button>
+                                </div>
+                            </div>
+                            <div class="modal design-modal3">
+                                <div class="modal-window">
+                                    <div class="modal-area">
+                                        <ul class="modal-list">
+                                            <li class="modal-item"><img src="../img/modal-cont/03/design-pf-03-02.png" class="item"></li>
+                                            <li class="modal-item"><img src="../img/modal-cont/03/design-pf-03-03.png" class="item"></li>
+                                            <li class="modal-item"><img src="../img/modal-cont/03/design-pf-03-04.png" class="item"></li>
+                                            <li class="modal-item"><img src="../img/modal-cont/03/design-pf-03-05.png" class="item"></li>
+                                            <li class="modal-item"><img src="../img/modal-cont/03/design-pf-03-06.png" class="item"></li>
+                                        </ul>
+                                    </div>
+                                    <button type="button" class="close-button">
+                                        <span class="close-button-item">&times;</span>
+                                    </button>
+                                </div>
+                            </div>
+                            <div class="modal design-modal4">
+                                <div class="modal-window">
+                                    <div class="modal-area">
+                                        <ul class="modal-list">
+                                            <li class="modal-item"><img src="../img/modal-cont/04/design-pf-04-02.png" class="item"></li>
+                                            <li class="modal-item"><img src="../img/modal-cont/04/design-pf-04-03.png" class="item"></li>
+                                            <li class="modal-item"><img src="../img/modal-cont/04/design-pf-04-04.png" class="item"></li>
+                                        </ul>
+                                    </div>
+                                    <button type="button" class="close-button">
+                                        <span class="close-button-item">&times;</span>
+                                    </button>
+                                </div>
+                            </div>
+                            <div class="modal design-modal5">
+                                <div class="modal-window">
+                                    <div class="modal-area">
+                                        <ul class="modal-list">
+                                            <li class="modal-item"><img src="../img/modal-cont/05/design-pf-05-02.png" class="item"></li>
+                                            <li class="modal-item"><img src="../img/modal-cont/05/design-pf-05-03.png" class="item"></li>
+                                            <li class="modal-item"><img src="../img/modal-cont/05/design-pf-05-04.png" class="item"></li>
+                                        </ul>
+                                    </div>
+                                    <button type="button" class="close-button">
+                                        <span class="close-button-item">&times;</span>
+                                    </button>
+                                </div>
+                            </div>
+                            <div class="modal design-modal6">
+                                <div class="modal-window">
+                                    <div class="modal-area">
+                                        <ul class="modal-list">
+                                            <li class="modal-item"><img src="../img/modal-cont/06/design-pf-06-02.png" class="item"></li>
+                                            <li class="modal-item"><img src="../img/modal-cont/06/design-pf-06-03.png" class="item"></li>
+                                            <li class="modal-item"><img src="../img/modal-cont/06/design-pf-06-04.png" class="item"></li>
+                                        </ul>
+                                    </div>
+                                    <button type="button" class="close-button">
+                                        <span class="close-button-item">&times;</span>
+                                    </button>
+                                </div>
+                            </div>
+                            <div class="modal design-modal7">
+                                <div class="modal-window">
+                                    <div class="modal-area">
+                                        <ul class="modal-list">
+                                            <li class="modal-item"><img src="../img/modal-cont/07/design-pf-07-02.png" class="item"></li>
+                                            <li class="modal-item"><img src="../img/modal-cont/07/design-pf-07-03.png" class="item"></li>
+                                        </ul>
+                                    </div>
+                                    <button type="button" class="close-button">
+                                        <span class="close-button-item">&times;</span>
+                                    </button>
+                                </div>
+                            </div>
+                            <div class="modal design-modal8">
+                                <div class="modal-window">
+                                    <div class="modal-area">
+                                        <ul class="modal-list">
+                                            <li class="modal-item"><img src="../img/modal-cont/08/design-pf-08-02.png" class="item"></li>
+                                            <li class="modal-item"><img src="../img/modal-cont/08/design-pf-08-03.png" class="item"></li>
+                                            <li class="modal-item"><img src="../img/modal-cont/08/design-pf-08-04.png" class="item"></li>
+                                        </ul>
+                                    </div>
+                                    <button type="button" class="close-button">
+                                        <span class="close-button-item">&times;</span>
+                                    </button>
+                                </div>
+                            </div>
+                            <div class="modal design-modal9">
+                                <div class="modal-window">
+                                    <div class="modal-area">
+                                        <ul class="modal-list">
+                                            <li class="modal-item"><img src="../img/modal-cont/09/design-pf-09-02.png" class="item"></li>
+                                        </ul>
+                                    </div>
+                                    <button type="button" class="close-button">
+                                        <span class="close-button-item">&times;</span>
+                                    </button>
                                 </div>
                             </div>
                         </div>
@@ -657,6 +785,42 @@
                                             <li class="display-item"><img src="../img/ex.png" class="item"></li>
                                         </ul>
                                     </div>
+                                </div>
+                            </div>
+                            <div class="modal dev-modal1">
+                                <div class="modal-window">
+                                    <div class="modal-area">
+                                        <ul class="modal-list">
+                                            <li class="modal-item"></li>
+                                        </ul>
+                                    </div>
+                                    <button type="button" class="close-button">
+                                        <span class="close-button-item">&times;</span>
+                                    </button>
+                                </div>
+                            </div>
+                            <div class="modal dev-modal2">
+                                <div class="modal-window">
+                                    <div class="modal-area">
+                                        <ul class="modal-list">
+                                            <li class="modal-item"></li>
+                                        </ul>
+                                    </div>
+                                    <button type="button" class="close-button">
+                                        <span class="close-button-item">&times;</span>
+                                    </button>
+                                </div>
+                            </div>
+                            <div class="modal dev-modal3">
+                                <div class="modal-window">
+                                    <div class="modal-area">
+                                        <ul class="modal-list">
+                                            <li class="modal-item"></li>
+                                        </ul>
+                                    </div>
+                                    <button type="button" class="close-button">
+                                        <span class="close-button-item">&times;</span>
+                                    </button>
                                 </div>
                             </div>
                         </div>
@@ -788,6 +952,43 @@
                 prevArrow: $('.dev-slick .pager .prev'),
                 nextArrow: $('.dev-slick .pager .next'),
                 speed: 1500,
+            });
+        });
+    </script>
+
+    <script type="text/javascript">
+        $(document).ready(function() {
+            // 각 슬라이드(.design-slick과 .dev-slick)의 li 요소를 클릭했을 때 모달창을 보여줌
+            $('.design-slick .display-list li').click(function() {
+                // 클릭한 li 요소의 인덱스를 가져옴 (0부터 시작)
+                var index = $(this).index() + 1;
+                $('.design-modal' + index).show();
+                // 모달창이 떴을 때 바디 스크롤 막음
+                $('body').css('overflow', 'hidden');
+            });
+
+            $('.dev-slick .display-list li').click(function() {
+                // 클릭한 li 요소의 인덱스를 가져옴 (0부터 시작)
+                var index = $(this).index() + 1;
+                $('.dev-modal' + index).show();
+                // 모달창이 떴을 때 바디 스크롤 막음
+                $('body').css('overflow', 'hidden');
+            });
+
+            // 닫기 버튼을 클릭했을 때 모달창을 숨김
+            $('.modal .close-button').click(function() {
+                $(this).closest('.modal').hide();
+                // 모달창이 닫혔을 때 바디 스크롤 원래대로 복구
+                $('body').css('overflow', 'auto');
+            });
+
+            // ESC 키 다운 이벤트를 처리하여 모달창 닫기
+            $(document).keydown(function(event) {
+                if (event.key === 'Escape') {
+                    $('.modal').hide();
+                    // 모달창이 닫혔을 때 바디 스크롤 원래대로 복구
+                    $('body').css('overflow', 'auto');
+                }
             });
         });
     </script>
