--- a/html/index.html
+++ b/html/index.html
@@ -965,6 +965,7 @@
                 $('.design-modal' + index).show();
                 // 모달창이 떴을 때 바디 스크롤 막음
                 $('body').css('overflow', 'hidden');
+                $('.modal').css('opacity', '1');
             });
 
             $('.dev-slick .display-list li').click(function() {
@@ -973,6 +974,7 @@
                 $('.dev-modal' + index).show();
                 // 모달창이 떴을 때 바디 스크롤 막음
                 $('body').css('overflow', 'hidden');
+                $('.modal').css('opacity', '1');
             });
 
             // 닫기 버튼을 클릭했을 때 모달창을 숨김
